# cursor-tools

./: .gitignore  CURSOR_MCP_SETUP.md  CURSOR_MCP_TROUBLESHOOTING.md  MCP_SERVER_GUIDE.md  README.md  clickhouse_fastmcp_server.py  config-demo.json  config.json  cursor-fastmcp-config.json  cursor-mcp-config.json  debug_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple-mcp-config.json
clickhouse_mcp_server/: __init__.py  config.py  main.py  tools.py
examples/: __init__.py  basic_usage.py
tests/: __init__.py  test_clickhouse_mcp_server.py
